# py-amazing-marvin

./: .envrc  .pythonrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  validation.yml
amazing_marvin/: __init__.py
src/amazing_marvin/: __init__.py
tests/: test_amazing_marvin.py
