[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amazing_marvin"
version = "0.0.2"
authors = [
    { name="Uwe Stuehler", email="ustuehler@bsdx.de" },
]
description = "An API client for Amazing Marvin"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    #"License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ustuehler/py-amazing-marvin"
"Bug Tracker" = "https://github.com/ustuehler/py-amazing-marvin/issues"
