[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amazing_marvin"
version = "0.1.0"
authors = [
    { name="Uwe Stuehler", email="uwe@bsdx.de" },
]
description = "A limited and experimental API client for Amazing Marvin"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/ustuehler/py-amazing-marvin"
"Bug Tracker" = "https://github.com/ustuehler/py-amazing-marvin/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
